package com.bilibili.designpatterncomponent.observer;

public interface Observer {
    void update(Subject subject ,String temperature);
}
